k8s/envoy/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: service1
spec:
  ports:
  - name: default
    port: 3000
    protocol: TCP
    targetPort: 80
  selector:
    app: service1
---
apiVersion: v1
kind: Service
metadata:
  name: service2
spec:
  ports:
  - name: default
    port: 3000
    protocol: TCP
    targetPort: 80
  selector:
    app: service2
---
apiVersion: v1
kind: Service
metadata:
  name: service3
spec:
  ports:
  - name: default
    port: 3000
    protocol: TCP
    targetPort: 80
  selector:
    app: service3
